<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/TT_Fondo">

    <ImageView
        android:id="@+id/logoImagen"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/travelers_talks_logo">
    </ImageView>

    <TextView
        android:id="@+id/tituloRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logoImagen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:text="@string/titulo_Registro"
        android:layout_marginTop="16dp"
        android:textSize="25sp"
        android:textAlignment="center">
    </TextView>

    <ImageView
        android:id="@+id/imagenAvatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/tituloRegistro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/avatar2"
        android:layout_marginTop="10dp">
    </ImageView>

    <ImageView
        android:id="@+id/imgCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_camera"
        app:layout_constraintTop_toBottomOf="@id/imagenAvatar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="40dp"
        app:tint="@color/white"
        android:layout_marginTop="10dp"/>
    <ImageView
        android:id="@+id/imgPicture"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_addphoto"
        app:layout_constraintTop_toBottomOf="@id/imagenAvatar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="80dp"
        app:tint="@color/white"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tituloName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imgCamera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:text="@string/titulo_Registro_Name"
        android:layout_marginTop="20dp"
        android:textSize="17sp"
        android:textAlignment="center"
        android:layout_marginEnd="205dp">
    </TextView>

    <EditText
        android:id="@+id/editName"
        app:layout_constraintTop_toBottomOf="@id/tituloName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="320dp"
        android:layout_height="20dp"
        android:hint="@string/titulo_Registro_Name_Edit"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginTop="10dp"
        android:background="@color/TT_Input"
        android:layout_marginEnd="13dp"
        >
    </EditText>

    <TextView
        android:id="@+id/tituloLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:text="@string/titulo_Registro_LastName"
        android:layout_marginTop="17dp"
        android:textSize="17sp"
        android:textAlignment="center"
        android:layout_marginEnd="170dp">
    </TextView>

    <EditText
        android:id="@+id/editLastName"
        app:layout_constraintTop_toBottomOf="@id/tituloLastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="320dp"
        android:layout_height="20dp"
        android:hint="@string/titulo_Registro_LastName_Edit"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginTop="10dp"
        android:background="@color/TT_Input"
        android:layout_marginEnd="13dp"
        >
    </EditText>

    <TextView
        android:id="@+id/tituloEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editLastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:text="@string/titulo_Registro_Email"
        android:layout_marginTop="20dp"
        android:textSize="17sp"
        android:textAlignment="center"
        android:layout_marginEnd="205dp">
    </TextView>

    <EditText
        android:id="@+id/editEmail"
        app:layout_constraintTop_toBottomOf="@id/tituloEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="320dp"
        android:layout_height="20dp"
        android:hint="@string/titulo_Registro_Email_Edit"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginTop="10dp"
        android:background="@color/TT_Input"
        android:layout_marginEnd="13dp"
        >
    </EditText>

    <TextView
        android:id="@+id/tituloPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:text="@string/titulo_Registro_Password"
        android:layout_marginTop="20dp"
        android:textSize="17sp"
        android:textAlignment="center"
        android:layout_marginEnd="170dp">
    </TextView>

    <EditText
        android:id="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@id/tituloPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="320dp"
        android:layout_height="20dp"
        android:hint="@string/titulo_Registro_Password_Edit"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginTop="10dp"
        android:background="@color/TT_Input"
        android:layout_marginEnd="13dp"
        android:inputType="textPassword"
        >
    </EditText>

    <TextView
        android:id="@+id/tituloNickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:text="@string/titulo_Registro_NickName"
        android:layout_marginTop="20dp"
        android:textSize="17sp"
        android:textAlignment="center"
        android:layout_marginEnd="170dp">
    </TextView>

    <EditText
        android:id="@+id/editNickname"
        app:layout_constraintTop_toBottomOf="@id/tituloNickname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="320dp"
        android:layout_height="20dp"
        android:hint="@string/titulo_Registro_NickName_Edit"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginTop="10dp"
        android:background="@color/TT_Input"
        android:layout_marginEnd="13dp"
        >
    </EditText>

    <Button
        android:id="@+id/btnSubmitRegistro"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/editNickname"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/TT_Action"
        android:text="@string/btnRegistroText"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        android:layout_marginBottom="10dp">
    </Button>

    <TextView
        android:id="@+id/linkALogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnSubmitRegistro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/TT_Action"
        android:text="@string/linkLogin"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:textAlignment="center">
    </TextView>

    <ProgressBar

        android:id="@+id/progressBarRegister"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/TT_Action"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/linkALogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logoImagen"

        />

</androidx.constraintlayout.widget.ConstraintLayout>