<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/TT_Fondo">

    <ImageView
        android:id="@+id/logoImagen"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/travelers_talks_logo">
    </ImageView>

    <TextView
        android:id="@+id/tituloLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logoImagen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:text="@string/titulo_Login"
        android:layout_marginTop="16dp"
        android:textSize="50sp"
        android:textAlignment="center">
    </TextView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:indeterminate="true"
        android:indeterminateTint="@color/TT_Action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/tituloEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tituloLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:text="@string/titulo_Login_Email"
        android:layout_marginTop="40dp"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginEnd="170dp">
    </TextView>

    <EditText
        android:id="@+id/editEmail"
        app:layout_constraintTop_toBottomOf="@id/tituloEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:hint="@string/titulo_Login_Email_Edit"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginTop="40dp"
        android:background="@color/TT_Input"
        android:layout_marginEnd="13dp"
        >
    </EditText>

    <TextView
        android:id="@+id/tituloPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:text="@string/titulo_Login_Password"
        android:layout_marginTop="40dp"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginEnd="120dp">
    </TextView>

    <EditText
        android:id="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@id/tituloPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:hint="@string/titulo_Login_Password_Edit"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginTop="40dp"
        android:background="@color/TT_Input"
        android:layout_marginEnd="13dp"
        android:inputType="textPassword"
        >
    </EditText>

    <Button
        android:id="@+id/btnSubmitLogin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="@+id/editPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/TT_Action"
        android:text="@string/btnLoginText"
        android:textSize="20sp"
        app:cornerRadius="10dp">
    </Button>

    <TextView
        android:id="@+id/linkARegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnSubmitLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/TT_Action"
        android:text="@string/linkRegistro"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:textAlignment="center">
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>